--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="./style.css" /> -->
 
     <!--
       manifest.json provides metadata used when your web app is added to the
